@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR
skinparam classAttributeFontColor white

Package Model <<Rectangle>>{
show Client fields
show Ingredient fields
show Order fields
show Recipe fields

Interface ReadOnlyAddressBook <<Interface>>
Interface ReadOnlyUserPrefs <<Interface>>
Interface Model <<Interface>>
Class AddressBook
Class ReadOnlyAddressBook
Class Model
Class ModelManager
Class UserPrefs
Class ReadOnlyUserPrefs

Class UniqueClientList
class Client {
    address: Address
    name: GenericString
    phone: Phone
    email: Email
}

Class UniqueIngredientList
class Ingredient {
    name: GenericString
    quantity: Quantity
    unit: GenericString
}

Class UniqueOrderList
class Order {
    clientAddress: Address
    clientName: GenericString
    clientPhone: Phone
    recipeName: GenericString
    recipeIngredients: RecipeIngredientList
    orderPrice: OrderPrice
    deadline: Deadline
    quantity: Quantity
    completionStatus: CompletionStatus
}

Class UniqueRecipeList
class Recipe {
    name: GenericString
    recipeIngredients: RecipeIngredientList
    recipePrice: RecipePrice
}
}

Class HiddenOutside #FFFFFF
HiddenOutside ..> Model

AddressBook .up.|> ReadOnlyAddressBook

ModelManager .up.|> Model
Model .right.> ReadOnlyUserPrefs
Model .left.> ReadOnlyAddressBook
ModelManager -left-> "1" AddressBook
ModelManager -right-> "1" UserPrefs
UserPrefs .up.|> ReadOnlyUserPrefs

AddressBook *--> "1" UniqueClientList
AddressBook *--> "1" UniqueIngredientList
AddressBook *--> "1" UniqueOrderList
AddressBook *--> "1" UniqueRecipeList

UniqueClientList --> "~*" Client
UniqueIngredientList --> "~*" Ingredient
UniqueOrderList --> "~*" Order
UniqueRecipeList --> "~*" Recipe
@enduml
